# rust_todo_vue

./: .env  .gitignore  README.md  package-lock.json  package.json
server/: Cargo.toml
server/migrations/: 20250216094329_todo.sql
server/src/: main.rs
server/src/in_memory/: routes.rs  state.rs
server/src/postgres/: app_state.rs  routes.rs  store.rs
src/: App.vue
src/composables/: useTodos.ts
