[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
dotenvy = "0.15.7"

[profile.dev.package.sqlx-macros]
opt-level = 3